--- a/tp3/Parte 1 continuación.ipynb
+++ b/tp3/Parte 1 continuación.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "c734b410-0ef5-433d-914c-bb464085e351",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
       "3     3     0.51     0.51\n",
       "4     4     0.55     0.55\n",
       "Guardado en /Users/ninadicostanzopereira/Desktop/BIGDATA/tp3/data_energía.xlsx\n",
-      "Primeras filas del DataFrame resultante:\n",
+      "Primeras filas del DataFrame:\n",
       "                          CODUSU  ANO4  TRIMESTRE  NRO_HOGAR  COMPONENTE  H15  \\\n",
       "0  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           1    1   \n",
       "1  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           2    1   \n",
@@ -363,12 +363,25 @@
     "\n",
     "# Mostramos las primeras filas del DataFrame con la nueva columna\n",
     "print(\"Primeras filas del DataFrame:\")\n",
-    "print(result_df.head())\n"
+    "print(result_df.head())\n",
+    "\n",
+    "# Agrupar por el ID de la casa y sumar el gasto de energía\n",
+    "gasto_por_vivienda = result_df.groupby('CODUSU')['adulto_equiv'].sum().reset_index()\n",
+    "\n",
+    "# Renombrar la columna de energía\n",
+    "gasto_por_vivienda = gasto_por_vivienda.rename(columns={'adulto_equiv': 'ad_equiv_hogar'})\n",
+    "\n",
+    "# Fusionar el DataFrame original con el DataFrame de gasto por vivienda\n",
+    "result_df = pd.merge(result_df, gasto_por_vivienda, on='CODUSU', how='left')\n",
+    "\n",
+    "# Guardar el resultado en un nuevo archivo de Excel\n",
+    "output_file_path = '/Users/ninadicostanzopereira/Desktop/BIGDATA/tp3/data_energía_hogares.xlsx'\n",
+    "result_df.to_excel(output_file_path, index=False, engine='openpyxl')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "id": "d4a36d9a-7bb0-48b9-be43-7b12d69cf46a",
    "metadata": {},
    "outputs": [
@@ -407,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "id": "5ae8d17f-d776-423d-9b64-d2f3c4517d53",
    "metadata": {},
    "outputs": [
@@ -415,39 +428,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Número de personas que no respondieron el ITF: 1618\n"
+      "Número de personas que no respondieron el ITF: 1618\n",
+      "                          CODUSU  ANO4  TRIMESTRE  NRO_HOGAR  COMPONENTE  H15  \\\n",
+      "0  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           1    1   \n",
+      "1  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           2    1   \n",
+      "4  TQRMNOPUTHKLMNCDEIIAD00791268  2023          4          1           1    1   \n",
+      "5  TQRMNOPUTHKLMNCDEIIAD00791268  2023          4          1           2    1   \n",
+      "6  TQRMNOPUTHKLMNCDEIIAD00791268  2023          4          1           3    1   \n",
+      "\n",
+      "   REGION MAS_500  AGLOMERADO  PONDERA  ...  DECCFR  IDECCFR RDECCFR  GDECCFR  \\\n",
+      "0       1       S          32     1775  ...       8      NaN       8        8   \n",
+      "1       1       S          32     1775  ...       8      NaN       8        8   \n",
+      "4       1       S          32     3129  ...       9      NaN       8        8   \n",
+      "5       1       S          32     3129  ...       9      NaN       8        8   \n",
+      "6       1       S          32     3129  ...       9      NaN       8        8   \n",
+      "\n",
+      "   PDECCFR  ADECCFR  PONDIH  adulto_equiv  ad_equiv_hogar  ingreso_necesario  \n",
+      "0      NaN        5    3079          0.74            1.37         182009.021  \n",
+      "1      NaN        5    3079          0.63            1.37         182009.021  \n",
+      "4      NaN        6    4648          0.76            2.82         374646.306  \n",
+      "5      NaN        6    4648          1.02            2.82         374646.306  \n",
+      "6      NaN        6    4648          1.04            2.82         374646.306  \n",
+      "\n",
+      "[5 rows x 180 columns]\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "'ad_equiv_hogar'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'ad_equiv_hogar'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 32\u001b[0m\n\u001b[1;32m     29\u001b[0m ad_equiv_hogar_column \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mad_equiv_hogar\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Agregar la columna 'ingreso_necesario' a la base 'respondieron'\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m respondieron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mingreso_necesario\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m respondieron[ad_equiv_hogar_column] \u001b[38;5;241m*\u001b[39m cbt_por_adulto_equivalente\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# Guardar la base 'respondieron' actualizada\u001b[39;00m\n\u001b[1;32m     35\u001b[0m respondieron\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrespondieron_actualizado.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[1;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'ad_equiv_hogar'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/zm/w5x0bhv13s5bv66qyvjh48dm0000gn/T/ipykernel_6846/793062007.py:27: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  respondieron['ingreso_necesario'] = respondieron['ad_equiv_hogar'] * cbt_por_adulto_equivalente\n"
      ]
     }
    ],
    "source": [
-    "#3.\n",
+    "#4.\n",
     "import pandas as pd\n",
     "\n",
     "# Carga la base de datos\n",
-    "df = pd.read_excel('datos_filtrados.xlsx')\n",
+    "df = pd.read_excel('data_energía_hogares.xlsx')\n",
     "\n",
-    "# Supongamos que la columna se llama 'ITF'\n",
     "itf_column = 'ITF'\n",
     "\n",
     "# Observaciones donde se reportó el ITF (ITF diferente de 0)\n",
@@ -464,14 +489,11 @@
     "no_respondieron_count = norespondieron.shape[0]\n",
     "print(f'Número de personas que no respondieron el ITF: {no_respondieron_count}')\n",
     "\n",
-    "# Definir el valor de la Canasta Básica Total para un adulto equivalente\n",
+    "# Definimos el valor de la Canasta Básica Total para un adulto equivalente\n",
     "cbt_por_adulto_equivalente = 132853.3\n",
     "\n",
-    "# Asegúrate de que la columna de adultos equivalentes en el hogar se llame 'ad_equiv_hogar'\n",
-    "ad_equiv_hogar_column = 'ad_equiv_hogar'\n",
-    "\n",
-    "# Agregar la columna 'ingreso_necesario' a la base 'respondieron'\n",
-    "respondieron['ingreso_necesario'] = respondieron[ad_equiv_hogar_column] * cbt_por_adulto_equivalente\n",
+    "# Agregamos la columna 'ingreso_necesario' a la base 'respondieron'\n",
+    "respondieron['ingreso_necesario'] = respondieron['ad_equiv_hogar'] * cbt_por_adulto_equivalente\n",
     "\n",
     "# Guardar la base 'respondieron' actualizada\n",
     "respondieron.to_csv('respondieron_actualizado.csv', index=False)\n",
@@ -479,6 +501,53 @@
     "# Verificar los primeros registros para asegurar que la columna se ha agregado correctamente\n",
     "print(respondieron.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "f63bf1b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Identificamos 1731 pobres\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/zm/w5x0bhv13s5bv66qyvjh48dm0000gn/T/ipykernel_6846/2489024630.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  respondieron['pobre'] = (respondieron['ITF'] < respondieron['ingreso_necesario']).astype(int)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5.\n",
+    "# Agregamos la columna 'pobre' a la base 'respondieron'\n",
+    "respondieron['pobre'] = (respondieron['ITF'] < respondieron['ingreso_necesario']).astype(int)\n",
+    "\n",
+    "# Guardar la base 'respondieron' actualizada\n",
+    "respondieron.to_csv('respondieron_actualizado2.csv', index=False)\n",
+    "\n",
+    "cantidad_pobres = respondieron['pobre'].sum() #porque 1 es pobre y 0 no es pobre entonces la cantidad de 1 es la cantidad de pobres\n",
+    "\n",
+    "print(\"Identificamos\", cantidad_pobres, \"pobres\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a4a5ab3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
